<resources>
    <string name="app_name" translatable="false">AniGRUD</string>
    <string name="aniGRUD">aniGRUD</string>
    <string name="Configuracion">Configuracion</string>
    <string name="Ordenar">Ordenar</string>
    <string name="title_activity_buscar">Buscar</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="nombreApp">aniGRUD</string>
    <string name="desarrolador">Desarrolador:</string>
    <string name="nombreDesarrolador">Antonio Martinez Diaz</string>
    <string name="ccontacto">Contacto:</string>
    <string name="contactoValor" translatable="false">AntonioMD@gmail.com</string>
    <string name="sobre">Sobre</string>
    <string name="parametro">Nombre del animal</string>
    <string name="filtro">Filtro</string>
    <string name="buscar">Buscar</string>
    <string name="LugarFoto">Lugar de la foto</string>
    <string name="especie">Especie</string>
    <string name="NombreAnimal">Nombr eanimal</string>
    <string name="datosBuscqueda">Datos de la búsqueda:</string>
    <string name="ntroduceFecha">Inroduce fecha</string>
    <string name="errorFecha">Error en el formato</string>
    <string name="errorCampo">Error campo vacío</string>
    <string name="borrarTipo">¿Qué quieres borrar?</string>
    <string name="si">Sí</string>
    <string name="cancelar">Cancelar</string>
    <string name="datosAnimal">Datos del animal:</string>
    <string name="fechaFoto">Fecha de la foto</string>
    <string name="fotoAnimal">Foto animal:</string>
    <string name="tipo">Tipo:</string>
    <string name="Guardar">Guardar</string>
    <string name="listado">Listado</string>
    <string name="Formulario">Formulario</string>
    <string name="ave">Ave</string>
    <string name="mamifero">Mamífero</string>
    <string name="reptil">Reptil</string>
    <string name="anfibio">Anfibio</string>
    <string name="agnato">Agnato</string>
    <string name="Adorable">Adorable</string>
    <string name="agregar">Agregar</string>
    <string name="dialogBorrar">¿Quieres borrar?</string>
    <string name="borrar">Borrar</string>
    <string name="ElementoBorrado">El elemento ha sido borrado</string>
    <string name="ElementoNoBorrado">El elemento no se borrará</string>
    <string name="Eliminar">Eliminar</string>
    <string name="borrarRegistro">¿Estás seguro que quieres borrar?</string>
    <string name="errorGuardado">Fallo al guardar.</string>
    <string name="existoGuardado">El animal se ha guardado con existo.</string>
    <string name="resultadosEncontrados">Resultados encontrados</string>
    <string name="imagenSelecion">Seleccione una imagen</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="Ayuda">Ayuda</string>
</resources>
